# silo

./: .envrc  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  CompactionTestReadme.md  DASHBOARD_DEV_SAMPLE_DATA.md  DASHBOARD_OBSERVABILITY_IDEAS.md  INTERNALS.md  LICENSE  OBSERVABILITY.md  README.md  TODO.md  build.rs  clippy.toml  flake.nix  justfile  package.json  process-compose.yml  rust-toolchain.toml  summary.md
.ai/: .lnai-manifest.json  AGENTS.md  settings.json
.ai/rules/: alloy.md  alloy.mdc  dst.md
.cargo/: config.toml
.cursor/: Dockerfile  environment.json  install.sh  start.sh
.cursor/commands/: fix-ci-tests.md
.cursor/rules/: alloy-sigils.mdc  alloy.mdc  nix.mdc  rust.mdc  test-coverage.mdc  tests.mdc
.github/workflows/: build-dev-image.yml  build.yml  ci.yml  docs.yml  grind.yml  simulation-testing.yml
benches/: bench_helpers.rs  big_shard_operations.rs  compaction_filter_impact.rs  concurrency_request_scan_compare.rs  job_shard_throughput.rs  job_termination.rs  k8s-bench.mjs  noisy_neighbor_throughput.rs  query_performance.rs  query_profile.rs  scan_tombstone_profile.rs  task_broker.rs  task_scanner_profile.rs
clients/ts-grpc/: .gitignore  README.md  package.json  tsconfig.json
deploy/autoscaler-integration-test/: namespace.yaml  rbac.yaml  statefulset.yaml
deploy/inttest/: autoscaler.yaml  rbac.yaml  statefulset.yaml
deploy/local-autoscaler/: deployment.yaml  rbac.yaml
deploy/local-test/: Dockerfile  admission-policy.yaml  compactor-config.toml  compactor-deployment.yaml  config.toml  crd.yaml  hpa.yaml  namespace.yaml  rbac.yaml  secret.yaml  statefulset.yaml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/RFCs/: Unify silo's enqueue + concurrency-gra.md
docs/integrations/: proto-docs.ts
example_configs/: compaction-harness-compactor-size-tiered.toml  compaction-harness-compactor.toml  compaction-harness-writer.toml  compactor-dev.toml  compactor-k8s.toml  dev-node1.toml  dev-node2.toml  k8s-gcs.toml  local-dev.toml
nix/modules/: devshell.nix  docker.nix  rust.nix  template.nix
onboarding/: 00-START-HERE.md  01-rust-and-ecosystem-primer.md  02-architecture-overview.md  03-codebase-map.md  04-job-lifecycle.md  05-storage-and-keys.md  06-coordination-and-sharding.md  07-concurrency-and-rate-limits.md  08-server-query-webui-observability.md  09-testing-and-verification.md  10-supporting-crates-and-dev-env.md  11-glossary.md
proto/: gubernator.proto  membership.proto  silo.proto  silo_admin.proto
schema/: internal_storage.fbs
scripts/: benchmark-history.mjs  compaction-harness.mts  deploy-local-orbstack.mts  reset-dev-cluster.sh  run-alloy-verification.mjs  run-simulation-tests.mjs  seed-sample-data.sh  validate-silo-sigils.js  validate-silo-tags.js  validate-typescript-proto.js
silo-autoscaler/: Cargo.toml  Dockerfile
silo-autoscaler/deploy/: admission-policy.yaml  crd.yaml  deployment.yaml  rbac.yaml  service.yaml  webhook.yaml
silo-autoscaler/src/: controller.rs  crd.rs  error.rs  lib.rs  main.rs  orphan.rs  validation.rs  webhook.rs
silo-autoscaler/tests/: autoscaler_integration_tests.rs
silo-compactor/: Cargo.toml
silo-compactor/src/: assignment.rs  compaction_filter.rs  config.rs  coordinator.rs  error.rs  lib.rs  main.rs  metrics.rs  pod_discovery.rs  shard_map.rs  storage.rs  worker.rs
silo-compactor/src/shard_loader/: etcd.rs  k8s.rs  mod.rs
silo-compactor/tests/: assignment_tests.rs  compaction_filter_integration.rs  shard_map_fixture_test.rs
silo-compactor/tests/fixtures/: shard_map.json
silo-macros/: Cargo.toml
silo-macros/src/: lib.rs
siloctl/: Cargo.toml
siloctl/src/: lib.rs  main.rs
specs/: coordination.als  job_shard.als
src/: TaskExecution.ts  arrow_ipc.rs  bootstrap.rs  client.ts  cluster_client.rs  cluster_query.rs  codec.rs  compaction.rs  concurrency.rs  coordination.rs  dst_events.rs  factory.rs  grpc_trace.rs  gubernator.rs  heap_profile.rs  index.ts  instrumented_db.rs  jemalloc_metrics.rs  job.rs  job_attempt.rs  job_store_shard.rs  keys.rs  lease_manager.rs  lease_tracker.rs  lib.rs  main.rs  metrics.rs  metrics.ts  object_store_counters.rs  pb_convert.rs  placement_engine.rs  query.rs  retry.rs  ring.rs  routing.rs  routing_client.rs  segment.rs  server.rs  settings.rs  shard.rs  (+12 more)
src/codec/: attempt_codec.rs  common.rs  decode.rs  encode.rs  job_codec.rs  lease_codec.rs  misc_codec.rs  task_codec.rs
src/compaction_filters/: completed_jobs.rs  mod.rs  noop_counting.rs
src/coordination/: etcd.rs  k8s.rs  k8s_backend.rs  mod.rs  none.rs  placement.rs  split.rs
src/grpc/: membership_service.rs  mod.rs  silo_service.rs
src/job_store_shard/: cancel.rs  cleanup.rs  compaction_filter.rs  counters.rs  (+19 more)
templates/: base.html  cluster.html  config.html  error.html  index.html  job.html  queue.html  queues.html  shard.html  shards.html  sql.html  sql_result.html  status_badge.html  tenant.html  tenants.html
tests/: arrow_ipc_tests.rs  bench_manifest_tests.rs  bench_routing_tests.rs  broker_head_of_line_blocking_tests.rs  cleanup_reacquire_tests.rs  cluster_client_tests.rs  cluster_info_cache_tests.rs  cluster_query_integration_tests.rs  cluster_query_tests.rs  codec_tests.rs  compact_shard_tests.rs  compaction_filter_tests.rs  compaction_scheduler_tests.rs  concurrency_counts_tests.rs  concurrency_requester_counter_tests.rs  concurrency_tests.rs  concurrent_grant_race_tests.rs  config_and_db.rs  config_and_db_tests.rs  coordination_mod_tests.rs  coordination_split_tests.rs  coordination_tests.rs  counter_reconcile_tests.rs  cross_shard_concurrency_tests.rs  etcd_coordination_tests.rs  etcd_test_helpers.rs  expire_helper_tests.rs  factory_tests.rs  floating_concurrency_remote_tests.rs  floating_concurrency_tests.rs  grpc_auth_tests.rs  grpc_enqueue_tests.rs  grpc_expedite_tests.rs  grpc_integration.rs  grpc_integration_helpers.rs  grpc_job_tests.rs  grpc_lease_task_tests.rs  grpc_misc_tests.rs  grpc_query_tests.rs  grpc_restart_tests.rs  (+52 more)
typescript_client/: .eslintignore  gitpkg.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+90 files in other folders)
