[package]
authors = ["Harry Brundage <harry@gadget.dev>"]
edition = "2024"
name = "silo"
description = "A background job server on top of object storage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
futures = "0.3"
slatedb = "0.9.2"
object_store = { version = "0.12", features = ["gcp"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmp-serde = "1.3"
toml = "0.8"
thiserror = "1.0"
anyhow = "1"
url = "2"
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4", "serde"] }
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
bytes = "1"
crossbeam-skiplist = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-perfetto = "0.1"
silo-macros = { path = "silo-macros" }
tokio-stream = "0.1"
etcd-client = { version = "0.13", default-features = false, features = ["tls"] }
kube = { version = "0.98", features = [
    "runtime",
    "client",
    "derive",
], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_31"], optional = true }
chrono = { version = "0.4", optional = true }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26" }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["http-json", "trace"] }
prometheus = "0.13"
usdt = "0.6.0"
tempfile = "3"
async-trait = "0.1"
datafusion = { version = "50", features = [
    "nested_expressions",
    "datetime_expressions",
    "regex_expressions",
    "recursive_protection",
] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
rand = "0.9"
datafusion-sql = "50"

[features]
default = []
dst = []
k8s = ["kube", "k8s-openapi", "chrono"]

[dev-dependencies]
turmoil = "0.7"
mad-turmoil = "0.2"
rand = "0.9"
fastrand = "2"                                                      # For deterministic simulation - seed must be set explicitly
rand_chacha = "0.9"
async-stream = "0.3"
tower = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[profile.release]
debug = 1     # debug info with line tables only for profiling
strip = false # do not strip symbols for profiling

[[bench]]
name = "job_shard_throughput"
harness = false

[[test]]
name = "turmoil_runner"
path = "tests/turmoil_runner/main.rs"
