[workspace]
members = [".", "silo-macros", "silo-autoscaler", "silo-compactor", "siloctl"]

# Workspace-wide lint configuration.
#
# Goal: catch the "lock held across await" / "blocking primitive in async
# context" patterns that caused the task starvation incident in PR #285,
# where a `std::sync::Mutex<HashSet>` guard was held across long iteration
# in a code path called from async dequeue tasks.
#
# Set to `warn` workspace-wide because existing tests intentionally hold
# locks across awaits in mock harnesses. CI escalates these to `deny` for
# `--lib --bins` only (see `clippy` job in `.github/workflows/ci.yml`),
# which is where the production hot paths live.
#
# `await_holding_invalid_type` is configured in `clippy.toml` to also flag
# `parking_lot` and `spin` mutex guards held across `.await`, in case those
# crates are introduced later.
[workspace.lints.clippy]
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
await_holding_invalid_type = "warn"

[package]
authors = ["Harry Brundage <harry@gadget.dev>"]
edition = "2024"
name = "silo"
description = "A background job server on top of object storage"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive", "env"] }
futures = "0.3"
slatedb = "0.12.1"
slatedb-common = "0.12.1"
object_store = { version = "0.12", features = ["gcp"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmp-serde = "1.3"
toml = "0.8"
thiserror = "1.0"
anyhow = "1"
url = "2"
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4", "serde"] }
flatbuffers = "25.2.10"
bytes = "1"
crossbeam-skiplist = "0.1"
dashmap = "6"
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-perfetto = "0.1"
silo-macros = { path = "silo-macros" }
tokio-stream = "0.1"
tokio-util = "0.7"
etcd-client = { version = "0.13", default-features = false, features = ["tls"] }
kube = { version = "0.98", features = [
    "runtime",
    "client",
    "derive",
], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_31"], optional = true }
chrono = { version = "0.4", optional = true }
turmoil = { version = "0.7", features = ["unstable-fs"], optional = true }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26" }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["http-json", "trace"] }
prometheus = "0.13"
usdt = "0.6.0"
tempfile = "3"
async-trait = "0.1"
datafusion = { version = "50", features = [
    "nested_expressions",
    "datetime_expressions",
    "regex_expressions",
    "recursive_protection",
], optional = true }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
rand = "0.9"
datafusion-sql = { version = "50", optional = true }
hostname = "0.4"
pprof = { version = "0.15", features = ["prost-codec", "frame-pointer"] }
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["profiling"] }
flate2 = "1"
urlencoding = "2"
storekey = { version = "0.11", features = ["storekey-derive"] }
hex = "0.4"
base64 = "0.22"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
# `console-subscriber` is gated behind the `tokio-console` feature so the
# tokio-console runtime instrumentation (and its TCP listener) only ship when
# we want to debug task starvation locally or in staging. Requires
# `--cfg tokio_unstable`, which is already set in `.cargo/config.toml`.
console-subscriber = { version = "0.4", optional = true }

[features]
default = ["k8s", "server"]
dst = ["turmoil"]
k8s = ["kube", "k8s-openapi", "chrono"]
# `server` enables the modules required by the silo daemon (SQL query engine,
# arrow IPC, web UI). Disable to build lightweight clients (siloctl, compactor)
# without paying the datafusion compile cost.
server = ["dep:datafusion", "dep:datafusion-sql"]
# Enables the tokio-console subscriber. Use to investigate task starvation:
# build with `--features tokio-console` and connect with `tokio-console`.
# The TCP listener binds to 127.0.0.1:6669 by default; override with
# `TOKIO_CONSOLE_BIND`. See https://github.com/tokio-rs/console.
tokio-console = ["dep:console-subscriber"]

[dev-dependencies]
siloctl = { path = "siloctl" }
mad-turmoil = "0.2"
rand = "0.9"
fastrand = "2"                                                      # For deterministic simulation - seed must be set explicitly
rand_chacha = "0.9"
async-stream = "0.3"
tower = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[profile.release]
debug = 1     # debug info with line tables only for profiling
strip = false # do not strip symbols for profiling
# NOTE: pprof uses frame-pointer based stack unwinding. The nix build in
# nix/modules/rust.nix sets RUSTFLAGS="-C force-frame-pointers=yes" to ensure
# frame pointers are preserved. Without this, production profiles will have
# incomplete call stacks.

[[bin]]
name = "silo"
path = "src/main.rs"
# The silo daemon binary pulls in the gRPC server and SQL query engine,
# which require the `server` feature (datafusion).
required-features = ["server"]

[[bench]]
name = "job_shard_throughput"
harness = false

[[bench]]
name = "query_performance"
harness = false
required-features = ["server"]

[[bench]]
name = "big_shard_operations"
harness = false

[[bench]]
name = "query_profile"
harness = false
required-features = ["server"]

[[bench]]
name = "task_scanner_profile"
harness = false

[[test]]
name = "turmoil_runner"
path = "tests/turmoil_runner/main.rs"
required-features = ["dst"]

[lints]
workspace = true
