[workspace]
members = [".", "silo-macros", "silo-autoscaler", "silo-compactor", "siloctl"]

[workspace.lints.clippy]
# Concurrency-focused lints opted in beyond the default set.
# significant_drop_in_scrutinee: guard held across whole match arm.
# significant_drop_tightening (nursery) is intentionally NOT enabled —
# it produced ~300 cosmetic findings against this codebase.
# The default await_holding_lock lint already covers std/parking_lot
# mutex and rwlock guards held across .await.
significant_drop_in_scrutinee = "warn"

[lints]
workspace = true

[package]
authors = ["Harry Brundage <harry@gadget.dev>"]
edition = "2024"
name = "silo"
description = "A background job server on top of object storage"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive", "env"] }
futures = "0.3"
slatedb = "0.12"
slatedb-common = "0.12"
object_store = { version = "0.12", features = ["gcp"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmp-serde = "1.3"
toml = "0.8"
thiserror = "1.0"
anyhow = "1"
url = "2"
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4", "v7", "serde"] }
flatbuffers = "25.2.10"
bytes = "1"
crossbeam-skiplist = "0.1"
dashmap = "6"
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-perfetto = "0.1"
console-subscriber = { version = "0.4", optional = true }
silo-macros = { path = "silo-macros" }
tokio-stream = "0.1"
tokio-util = "0.7"
etcd-client = { version = "0.13", default-features = false, features = ["tls"] }
kube = { version = "0.98", features = [
    "runtime",
    "client",
    "derive",
], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_31"], optional = true }
chrono = { version = "0.4", optional = true }
turmoil = { version = "0.7", features = ["unstable-fs"], optional = true }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26" }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["http-json", "trace"] }
prometheus = { version = "0.13", features = ["process"] }
usdt = "0.6.0"
tempfile = "3"
async-trait = "0.1"
datafusion = { version = "50", features = [
    "nested_expressions",
    "datetime_expressions",
    "regex_expressions",
    "recursive_protection",
], optional = true }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
rand = "0.9"
datafusion-sql = { version = "50", optional = true }
hostname = "0.4"
pprof = { version = "0.15", features = ["prost-codec", "frame-pointer"] }
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["profiling", "stats"] }
flate2 = "1"
urlencoding = "2"
storekey = { version = "0.11", features = ["storekey-derive"] }
hex = "0.4"
base64 = "0.22"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[features]
default = ["k8s", "server"]
dst = ["turmoil"]
k8s = ["kube", "k8s-openapi", "chrono"]
# `server` enables the modules required by the silo daemon (SQL query engine,
# arrow IPC, web UI). Disable to build lightweight clients (siloctl, compactor)
# without paying the datafusion compile cost.
server = ["dep:datafusion", "dep:datafusion-sql"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dev-dependencies]
siloctl = { path = "siloctl" }
mad-turmoil = "0.2"
rand = "0.9"
fastrand = "2"                                                      # For deterministic simulation - seed must be set explicitly
rand_chacha = "0.9"
async-stream = "0.3"
tower = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[patch.crates-io]
slatedb = { git = "https://github.com/slatedb/slatedb", rev = "628821513eb1b91d2fa1b7d3c4e9e7a2077b0d2c" }
slatedb-common = { git = "https://github.com/slatedb/slatedb", rev = "628821513eb1b91d2fa1b7d3c4e9e7a2077b0d2c" }
slatedb-txn-obj = { git = "https://github.com/slatedb/slatedb", rev = "628821513eb1b91d2fa1b7d3c4e9e7a2077b0d2c" }

[profile.release]
debug = 1     # debug info with line tables only for profiling
strip = false # do not strip symbols for profiling
# NOTE: pprof uses frame-pointer based stack unwinding. The nix build in
# nix/modules/rust.nix sets RUSTFLAGS="-C force-frame-pointers=yes" to ensure
# frame pointers are preserved. Without this, production profiles will have
# incomplete call stacks.

[[bin]]
name = "silo"
path = "src/main.rs"
# The silo daemon binary pulls in the gRPC server and SQL query engine,
# which require the `server` feature (datafusion).
required-features = ["server"]

[[bench]]
name = "job_shard_throughput"
harness = false

[[bench]]
name = "query_performance"
harness = false
required-features = ["server"]

[[bench]]
name = "big_shard_operations"
harness = false

[[bench]]
name = "query_profile"
harness = false
required-features = ["server"]

[[bench]]
name = "task_scanner_profile"
harness = false

[[bench]]
name = "job_termination"
harness = false

[[test]]
name = "turmoil_runner"
path = "tests/turmoil_runner/main.rs"
required-features = ["dst"]
