[package]
name = "silo-autoscaler"
version = "0.1.0"
edition = "2024"
description = "Kubernetes controller and admission webhook for safe Silo StatefulSet scaling"

[[bin]]
name = "silo-autoscaler"
path = "src/main.rs"

[dependencies]
kube = { version = "0.98", features = ["runtime", "client", "derive", "admission"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
